--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <style type="text/css">
   body {
-    background: url(<%= @url %>) no-repeat center center fixed; 
+    background: image-url(<%= @url %>) no-repeat center center fixed; 
     background-size: cover;
     font-family: 'Lato', sans-serif;
     }
